--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>hi</title>
-  <link rel="stylesheet" href="stylish.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CGPA</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            text-align: center;
+        }
+        h1 {
+            color: #333;
+            margin-top: 100px;
+        }
+    </style>
 </head>
-<audio src="vv55.mp3" controls loop autoplay></audio>
 <body>
-  <h1>Hailo BUB KUMAR 😂</h1>
-  <canvas id="canvas"></canvas>
-  <script src="abcd.js"></script>
-  
+    <h1>Your CGPA is 8.02</h1>
 </body>
 </html>
